objects/Account__x.object
<CustomObject>
    <externalDataSource>TSOrg_C2S_TSTask</externalDataSource>
    <externalName>Account</externalName>
    <fields>
        <fullName>AM_Hierarchy_c__c</fullName>
        <externalDeveloperName>AM_Hierarchy__c</externalDeveloperName>
        <label>AM Hierarchy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <externalDeveloperName>AccountNumber</externalDeveloperName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSource__c</fullName>
        <externalDeveloperName>AccountSource</externalDeveloperName>
        <label>Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>Sample Request</fullName>
                </value>
                <value>
                    <fullName>Campaign Form</fullName>
                </value>
                <value>
                    <fullName>Cannot be determined</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Te.com Contact Us</fullName>
                </value>
                <value>
                    <fullName>TE.com Registration</fullName>
                </value>
                <value>
                    <fullName>PIC Hot Lead</fullName>
                </value>
                <value>
                    <fullName>Te.com Document Download</fullName>
                </value>
                <value>
                    <fullName>Campaign Chat</fullName>
                </value>
                <value>
                    <fullName>Campaign Contact Us</fullName>
                </value>
                <value>
                    <fullName>Campaign Document Download</fullName>
                </value>
                <value>
                    <fullName>Te.com Chat</fullName>
                </value>
                <value>
                    <fullName>Campaign Registration</fullName>
                </value>
                <value>
                    <fullName>Request a Price</fullName>
                </value>
                <value>
                    <fullName>WeChat Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Manager_1_c__c</fullName>
        <externalDeveloperName>Account_Manager_1__c</externalDeveloperName>
        <label>Account Manager 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_7_c__c</fullName>
        <externalDeveloperName>Account_Manager_7__c</externalDeveloperName>
        <label>Account Manager 7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_User1_c__c</fullName>
        <externalDeveloperName>Account_Manager_User1__c</externalDeveloperName>
        <label>Account Manager User  1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_User2_c__c</fullName>
        <externalDeveloperName>Account_Manager_User2__c</externalDeveloperName>
        <label>Account Manager User  2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_User3_c__c</fullName>
        <externalDeveloperName>Account_Manager_User3__c</externalDeveloperName>
        <label>Account Manager User  3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <externalDeveloperName>num_CustomerKeyId__c</externalDeveloperName>
        <label>Account</label>
        <length>255</length>
        <referenceTargetField>Account.TE_Customer_Key_Id__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TS Accounts</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <externalDeveloperName>AnnualRevenue</externalDeveloperName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Tooling_code_c__c</fullName>
        <externalDeveloperName>Application_Tooling_code__c</externalDeveloperName>
        <label>Application Tooling code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Count_c__c</fullName>
        <externalDeveloperName>Attachment_Count__c</externalDeveloperName>
        <label>Number Of Attachment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Email_c__c</fullName>
        <externalDeveloperName>BU_Owner_Email__c</externalDeveloperName>
        <label>BU Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Name_c__c</fullName>
        <externalDeveloperName>BU_Owner_Name__c</externalDeveloperName>
        <label>BU Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Phone_c__c</fullName>
        <externalDeveloperName>BU_Owner_Phone__c</externalDeveloperName>
        <label>BU Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <externalDeveloperName>BillingAddress</externalDeveloperName>
        <label>Billing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <externalDeveloperName>BillingCity</externalDeveloperName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <externalDeveloperName>BillingCountry</externalDeveloperName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>BillingGeocodeAccuracy</externalDeveloperName>
        <label>Billing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingLatitude__c</fullName>
        <externalDeveloperName>BillingLatitude</externalDeveloperName>
        <label>Billing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingLongitude__c</fullName>
        <externalDeveloperName>BillingLongitude</externalDeveloperName>
        <label>Billing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <externalDeveloperName>BillingPostalCode</externalDeveloperName>
        <label>Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <externalDeveloperName>BillingState</externalDeveloperName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <externalDeveloperName>BillingStreet</externalDeveloperName>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyType_c__c</fullName>
        <externalDeveloperName>CompanyType__c</externalDeveloperName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Harness House</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_Count_c__c</fullName>
        <externalDeveloperName>Contacts_Count__c</externalDeveloperName>
        <label>Number Of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerServiceRep_c__c</fullName>
        <externalDeveloperName>CustomerServiceRep__c</externalDeveloperName>
        <label>CustomerServiceRep</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Account_Inactivated_c__c</fullName>
        <externalDeveloperName>Date_Account_Inactivated__c</externalDeveloperName>
        <label>Date Account Inactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Account Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Account Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Force_Update_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Force_Update__c</externalDeveloperName>
        <label>Force_Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAM_1_c__c</fullName>
        <externalDeveloperName>GAM_1__c</externalDeveloperName>
        <label>GAM 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_2_c__c</fullName>
        <externalDeveloperName>GAM_2__c</externalDeveloperName>
        <label>GAM 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Hierarchy_c__c</fullName>
        <externalDeveloperName>GAM_Hierarchy__c</externalDeveloperName>
        <label>GAM Hierarchy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_User1_c__c</fullName>
        <externalDeveloperName>GAM_User1__c</externalDeveloperName>
        <label>GAM User 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_User2_c__c</fullName>
        <externalDeveloperName>GAM_User2__c</externalDeveloperName>
        <label>GAM User2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_User3_c__c</fullName>
        <externalDeveloperName>GAM_User3__c</externalDeveloperName>
        <label>GAM User3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import2_Id_c__c</fullName>
        <externalDeveloperName>Import2_Id__c</externalDeveloperName>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <externalDeveloperName>Industry</externalDeveloperName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive Vehicle Mfgs</fullName>
                </value>
                <value>
                    <fullName>Hybrid/Electric/Alt Powered Vehicle Mfgs</fullName>
                </value>
                <value>
                    <fullName>Automotive Compnt Aggregate Mfgs (CAMs)</fullName>
                </value>
                <value>
                    <fullName>Automotive Wiring Harness Mfgs</fullName>
                </value>
                <value>
                    <fullName>Automotive Diagnostic Equipment</fullName>
                </value>
                <value>
                    <fullName>Commercial Vehicle Industry (CVI)</fullName>
                </value>
                <value>
                    <fullName>CVI Truck &amp; Bus Mfgs</fullName>
                </value>
                <value>
                    <fullName>CVI Construction Equipment Mfgs</fullName>
                </value>
                <value>
                    <fullName>CVI Farm Machinery Mfgs</fullName>
                </value>
                <value>
                    <fullName>CVI Motorcycles &amp; Rec Vehicles Mfgs</fullName>
                </value>
                <value>
                    <fullName>CVI Campers &amp; Mobile Homes Mfgs</fullName>
                </value>
                <value>
                    <fullName>CVI Off-Highway, Truck &amp; Bus</fullName>
                </value>
                <value>
                    <fullName>CVI Component Aggregate Mfgs (CAMs)</fullName>
                </value>
                <value>
                    <fullName>CVI Wiring Harness Mfgs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawCompanyId__c</fullName>
        <externalDeveloperName>JigsawCompanyId</externalDeveloperName>
        <label>Jigsaw Company ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEVEL_1_INDUSTRY_CDE_c__c</fullName>
        <externalDeveloperName>LEVEL_1_INDUSTRY_CDE__c</externalDeveloperName>
        <label>Industry Code Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEVEL_1_INDUSTRY_NM_c__c</fullName>
        <externalDeveloperName>LEVEL_1_INDUSTRY_NM__c</externalDeveloperName>
        <label>Industry Name Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Aero &amp; Defense Eltrn</fullName>
                </value>
                <value>
                    <fullName>Alt Energy Solutions</fullName>
                </value>
                <value>
                    <fullName>Business/Retail Eq</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Bldg Eq</fullName>
                </value>
                <value>
                    <fullName>Commun Service Prov</fullName>
                </value>
                <value>
                    <fullName>Computers &amp; Periph Eq</fullName>
                </value>
                <value>
                    <fullName>DataComm</fullName>
                </value>
                <value>
                    <fullName>Do Not Use</fullName>
                </value>
                <value>
                    <fullName>Eltrcl/Eltrn Comp/Acc</fullName>
                </value>
                <value>
                    <fullName>Home Ent/Cons Eltrn</fullName>
                </value>
                <value>
                    <fullName>Household Appliances</fullName>
                </value>
                <value>
                    <fullName>Industrial Mach &amp; Eq</fullName>
                </value>
                <value>
                    <fullName>Instrument &amp; Meas Eq</fullName>
                </value>
                <value>
                    <fullName>Lighting In/Outdoor</fullName>
                </value>
                <value>
                    <fullName>Mdcl Instrs/Equipment</fullName>
                </value>
                <value>
                    <fullName>Mobile Phones</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicles</fullName>
                </value>
                <value>
                    <fullName>Networking/Cabling Sy</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Rail &amp; Mass Trsp Eq</fullName>
                </value>
                <value>
                    <fullName>Service Industries</fullName>
                </value>
                <value>
                    <fullName>Whsl &amp; Retail Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LEVEL_4_INDUSTRY_CDE_c__c</fullName>
        <externalDeveloperName>LEVEL_4_INDUSTRY_CDE__c</externalDeveloperName>
        <label>Industry Code Level 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legally_Restricted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Legally_Restricted__c</externalDeveloperName>
        <label>Restricted Account Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MM_Hierarchy_c__c</fullName>
        <externalDeveloperName>MM_Hierarchy__c</externalDeveloperName>
        <label>MM Hierarchy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_1_c__c</fullName>
        <externalDeveloperName>Market_Manager_1__c</externalDeveloperName>
        <label>Market Manager 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_User1_c__c</fullName>
        <externalDeveloperName>Market_Manager_User1__c</externalDeveloperName>
        <label>Market Manager User 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_User2_c__c</fullName>
        <externalDeveloperName>Market_Manager_User2__c</externalDeveloperName>
        <label>Market Manager User 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_User3_c__c</fullName>
        <externalDeveloperName>Market_Manager_User3__c</externalDeveloperName>
        <label>Market Manager User 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <externalDeveloperName>Ownership</externalDeveloperName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partners_Count_c__c</fullName>
        <externalDeveloperName>Partners_Count__c</externalDeveloperName>
        <label>Number Of Partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Account Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medium High</fullName>
                </value>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <externalDeveloperName>ShippingAddress</externalDeveloperName>
        <label>Shipping Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <externalDeveloperName>ShippingCity</externalDeveloperName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <externalDeveloperName>ShippingCountry</externalDeveloperName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
        <label>Shipping Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <externalDeveloperName>ShippingLatitude</externalDeveloperName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <externalDeveloperName>ShippingLongitude</externalDeveloperName>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <externalDeveloperName>ShippingState</externalDeveloperName>
        <label>Shipping State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <externalDeveloperName>ShippingStreet</externalDeveloperName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <externalDeveloperName>SicDesc</externalDeveloperName>
        <label>SIC Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <externalDeveloperName>Sic</externalDeveloperName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <externalDeveloperName>Site</externalDeveloperName>
        <label>Account Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_BU_c__c</fullName>
        <externalDeveloperName>Source_BU__c</externalDeveloperName>
        <label>Source BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Territory_1_c__c</fullName>
        <externalDeveloperName>Territory_1__c</externalDeveloperName>
        <label>Territory 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_1_user_c__c</fullName>
        <externalDeveloperName>Territory_1_user__c</externalDeveloperName>
        <label>Territory 1 user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_2_User_c__c</fullName>
        <externalDeveloperName>Territory_2_User__c</externalDeveloperName>
        <label>Territory 2 User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_2_c__c</fullName>
        <externalDeveloperName>Territory_2__c</externalDeveloperName>
        <label>Territory 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_3_c__c</fullName>
        <externalDeveloperName>Territory_3__c</externalDeveloperName>
        <label>Territory 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_3_user_c__c</fullName>
        <externalDeveloperName>Territory_3_user__c</externalDeveloperName>
        <label>Territory 3 user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_c__c</fullName>
        <externalDeveloperName>Territory__c</externalDeveloperName>
        <label>Territory</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TickerSymbol__c</fullName>
        <externalDeveloperName>TickerSymbol</externalDeveloperName>
        <label>Ticker Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>CM - Component Aggregate Mfgr (CAM)</fullName>
                </value>
                <value>
                    <fullName>CM - Harness Maker (HM)</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>OEM Main</fullName>
                </value>
                <value>
                    <fullName>OEM Additional</fullName>
                </value>
                <value>
                    <fullName>Contract Manufacturer</fullName>
                </value>
                <value>
                    <fullName>CM Partner via Distribution</fullName>
                </value>
                <value>
                    <fullName>CAM Distribution</fullName>
                </value>
                <value>
                    <fullName>Harness Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <externalDeveloperName>Website</externalDeveloperName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_They_Make_c__c</fullName>
        <externalDeveloperName>What_They_Make__c</externalDeveloperName>
        <label>What They Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chk_EnrichFromTED_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>chk_EnrichFromTED__c</externalDeveloperName>
        <label>EnrichFromTED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_IsActive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>chk_IsActive__c</externalDeveloperName>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv_Created_by_Cirrus_Insight_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>cirrusadv__Created_by_Cirrus_Insight__c</externalDeveloperName>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>